slotGenerateKey: correctly invoke GPG for interactive key generation

While at it, use --full-gen-key if the given GnuPG binary is new enough.

BUG:369274
FIXED-IN:16.12.0

Signed-off-by: Steven Noonan <steven@uplinklabs.net>